feat: optimize VirtualThreadDemo to showcase performance improvement with virtual threads